Install Ruby gems into a project-local path to avoid needing sudo
Live re-validation (eval harness full 5-goal batch) surfaced a third
Ruby-toolchain issue: a plain `bundle install` fails non-interactively on
an unmodified macOS system Ruby, since its gem directory is
permission-protected and requires sudo with no interactive terminal to
prompt (Bundler::SudoNotPermittedError). The model correctly diagnosed
nothing wrong with its own code and burned its full retry budget uselessly
editing a Gemfile that could never fix a host permission issue.

`bundle install --path vendor/bundle` installs gems into a project-local,
sandbox-writable directory instead - portable across Bundler 1.x/2.x, and
the path choice persists via .bundle/config so the later `bundle exec`
call needs no changes. Regression test updated, confirmed failing pre-fix.

Also documents two confirmed-recurring but deliberately unfixed findings
from the same batch (Django/Python goals drifting toward Java/Spring
output; a Python goal inventing a Maven-style src layout) - no clean
ground-truth signal exists to correct against, unlike the Ruby fixes.